Fixed horizontal overflow

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -17,7 +17,7 @@ html {
   transform-style: preserve-3d;
   height: 100%;
   overflow-y: scroll;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 .slide:before {
